@@ -1,39 +1,0 @@
-#!/usr/bin/perl -w -I/opt/eprints3/perl_lib
-
-######################################################################
-#
-#  __COPYRIGHT__
-#
-# Copyright 2000-2008 University of Southampton. All Rights Reserved.
-# 
-# __LICENSE__
-#
-######################################################################
-# cjg not supported yet.
-
-use EPrints;
-
-use strict;
-#cjg Nice Command Options
-#cjg man page
- 
-# Set STDOUT to auto flush (without needing a \n)
-$|=1;
-
-my $session = new EPrints::Session( 1, $ARGV[0] );
-exit( 1 ) unless( defined $session );
-
-my $user_ds = $session->get_repository->get_dataset( "user" );
-$user_ds->map( $session, \&print_user_email );
-
-$session->terminate();
-
-sub print_user_email
-{
-	my( $session, $dataset, $user ) = @_;
-
-	if( $user->is_set( "email" ) )
-	{
-		print $user->get_value( "email" )."\n";
-	}
-}
